dataset1235/2025-2/1153765216/users/2249779960/executions/2747719322_48684178.log
== SUBMISSION (2025-08-21 17:17:58)
-- CODE: 
vendas = float(input'())
lucro = vendas * 0.3
print(round(lucro, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 1
    vendas = float(input'())
                        ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 1
    vendas = float(input'())
                        ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    vendas = float(input'())
                        ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 1
    vendas = float(input'())
                        ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 1
    vendas = float(input'())
                        ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 1
    vendas = float(input'())
                        ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 17:18:14)
-- CODE: 
vendas = float(input())
lucro = vendas * 0.3
print(round(lucro, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
